--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "fastcgi-kit",
-  "version": "0.1.0",
-  "description": "Modules to implement FastCGI",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
-  "scripts": {
-    "test": "jest",
-    "lint": "eslint --fix 'src/**/*.ts'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.35.0",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
-  }
+    "name": "fastcgi-kit",
+    "version": "0.1.0",
+    "description": "Modules to implement FastCGI",
+    "main": "dist/index.js",
+    "module": "dist/index.mjs",
+    "type": "module",
+    "typings": "dist/index.d.ts",
+    "files": [
+        "/dist"
+    ],
+    "scripts": {
+        "test": "jest",
+        "build": "rollup -c",
+        "lint": "eslint --fix 'src/**/*.ts'"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/jest": "^29.4.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "esbuild": "^0.17.14",
+        "eslint": "^8.35.0",
+        "jest": "^29.5.0",
+        "prettier": "^2.8.4",
+        "rollup": "^3.20.2",
+        "rollup-plugin-dts": "^5.3.0",
+        "rollup-plugin-esbuild": "^5.0.0",
+        "ts-jest": "^29.0.5",
+        "typescript": "^4.9.5"
+    }
 }
