--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "PHP"
     ],
     "devDependencies": {
+        "@types/express": "^4.17.17",
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
         "@typescript-eslint/parser": "^5.54.1",
