--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "scripts": {
         "test": "jest",
         "build": "rollup -c",
+        "watch": "rollup -c -w",
         "lint": "eslint --fix 'src/**/*.ts'"
     },
     "keywords": [
