--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fastcgi-kit",
-    "version": "0.11.0",
+    "version": "0.12.0",
     "description": "Modules to implement FastCGI",
     "main": "dist/index.js",
     "module": "dist/esm/index.mjs",
@@ -13,7 +13,8 @@
         "test": "jest",
         "build": "rollup -c",
         "watch": "rollup -c -w",
-        "lint": "eslint --fix 'src/**/*.ts'"
+        "lint": "eslint --fix 'src/**/*.ts'",
+        "prepublishOnly": "npm run build"
     },
     "keywords": [
         "FastCGI",
