--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fastcgi-kit",
-    "version": "0.12.0",
+    "version": "0.13.0",
     "description": "Modules to implement FastCGI",
     "main": "dist/index.js",
     "module": "dist/esm/index.mjs",
@@ -21,6 +21,7 @@
         "PHP"
     ],
     "devDependencies": {
+        "@rollup/plugin-typescript": "^11.1.1",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
@@ -30,8 +31,6 @@
         "jest": "^29.5.0",
         "prettier": "^2.8.4",
         "rollup": "^3.20.2",
-        "rollup-plugin-dts": "^5.3.0",
-        "rollup-plugin-esbuild": "^5.0.0",
         "ts-jest": "^29.0.5",
         "typescript": "^4.9.5"
     },
@@ -44,5 +43,8 @@
     "bugs": {
         "url": "https://github.com/basuke/node-fastcgi-kit/issues"
     },
-    "homepage": "https://github.com/basuke/node-fastcgi-kit#readme"
+    "homepage": "https://github.com/basuke/node-fastcgi-kit#readme",
+    "dependencies": {
+        "remove": "^0.1.5"
+    }
 }
